--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
 
   <body class="body data-page">
-    <header class="header">
+    <!-- <header class="header">
       <div class="conteiner header__conteiner">
         <a href="" class="header__logo"
           ><span class="header__logo--first-logo">Web</span>Studio</a
@@ -72,17 +72,17 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <main>
       <!-- Hero -->
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="hero__conteiner conteiner">
           <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
           <button data-modal-open class="hero__btn" type="button">
             Заказать услугу
           </button>
         </div>
-      </section>
+      </section> -->
 
       <!-- Features -->
       <section class="features">
@@ -90,7 +90,7 @@
           <ul class="features__list">
             <li class="features__item">
               <div class="features__icons">
-                <svg class="features__icons--antenna" width="70" height="70">
+                <svg class="features__icons--pic" width="70" height="70">
                   <use href="./images/icons.svg#antenna"></use>
                 </svg>
               </div>
@@ -102,7 +102,7 @@
             </li>
             <li class="features__item">
               <div class="features__icons">
-                <svg class="features__icons--clock" width="70" height="70">
+                <svg class="features__icons--pic" width="70" height="70">
                   <use href="./images/icons.svg#clock"></use>
                 </svg>
               </div>
@@ -114,7 +114,7 @@
             </li>
             <li class="features__item">
               <div class="features__icons">
-                <svg class="features__icons--diagram" width="70" height="70">
+                <svg class="features__icons--pic" width="70" height="70">
                   <use href="./images/icons.svg#diagram"></use>
                 </svg>
               </div>
@@ -126,7 +126,7 @@
             </li>
             <li class="features__item">
               <div class="features__icons">
-                <svg class="features__icons--astronaut" width="70" height="70">
+                <svg class="features__icons--pic" width="70" height="70">
                   <use href="./images/icons.svg#astronaut"></use>
                 </svg>
               </div>
@@ -450,7 +450,7 @@
       </section>
 
       <!-- Section clients -->
-      <section class="clients">
+      <!-- <section class="clients">
         <div class="conteiner">
           <h2 class="clients__title">Постоянные клиенты</h2>
           <ul class="clients__list">
@@ -534,9 +534,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="conteiner footer__conteiner">
         <div class="footer__adds">
           <a href="" class="footer__logo"
@@ -641,10 +641,10 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- Modal -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button data-modal-close class="close-btn" type="button">
           <svg class="icon-close" width="11" height="11">
@@ -710,7 +710,7 @@
           <button class="send-btn" type="submit">Отправить</button>
         </form>
       </div>
-    </div>
+    </div> -->
     <script src="./js/modal.js"></script>
   </body>
 </html>
