--- a/index.html
+++ b/index.html
@@ -188,10 +188,19 @@
           <ul class="team-list">
             <li class="team-item">
               <img
-                src="./images/team/img-1sq.jpg"
+                srcset="
+                  ./images/team/img-1-270.jpg 270w,
+                  ./images/team/img-1-354.jpg 354w,
+                  ./images/team/img-1-450.jpg 450w,
+                  ./images/team/img-1-540.jpg 540w,
+                  ./images/team/img-1-708.jpg 708w,
+                  ./images/team/img-1-900.jpg 900w
+                "
+                sizes="(min-width: 1200) 270px, (min-width: 768px) 354px, 100vw "
+                src="./images/team/img-1-270.jpg"
                 alt="Игорь Демьяненко"
-                width="270"
-                height="260"
+                width="450"
+                height="460"
               />
               <div class="card-name">
                 <h3 class="team-caption">Игорь Демьяненко</h3>
@@ -254,10 +263,19 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/team/img-2sq.jpg"
+                srcset="
+                  ./images/team/img-2-270.jpg 270w,
+                  ./images/team/img-2-354.jpg 354w,
+                  ./images/team/img-2-450.jpg 450w,
+                  ./images/team/img-2-540.jpg 540w,
+                  ./images/team/img-2-708.jpg 708w,
+                  ./images/team/img-2-900.jpg 900w
+                "
+                sizes="(min-width: 1200) 270px, (min-width: 768px) 354px, 100vw"
+                src="./images/team/img-2-270.jpg"
                 alt="Ольга Репина"
-                width="270"
-                height="260"
+                width="450"
+                height="460"
               />
               <div class="card-name">
                 <h3 class="team-caption">Ольга Репина</h3>
@@ -320,10 +338,19 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/team/img-3sq.jpg"
+                srcset="
+                  ./images/team/img-3-270.jpg 270w,
+                  ./images/team/img-3-354.jpg 354w,
+                  ./images/team/img-3-450.jpg 450w,
+                  ./images/team/img-3-540.jpg 540w,
+                  ./images/team/img-3-708.jpg 708w,
+                  ./images/team/img-3-900.jpg 900w
+                "
+                sizes="(min-width: 1200) 270px, (min-width: 768px) 354px, 100vw"
+                src="./images/team/img-3-270.jpg"
                 alt="Николай Тарасов"
-                width="270"
-                height="260"
+                width="450"
+                height="460"
               />
               <div class="card-name">
                 <h3 class="team-caption">Николай Тарасов</h3>
@@ -386,10 +413,19 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/team/img-4sq.jpg"
+                srcset="
+                  ./images/team/img-4-270.jpg 270w,
+                  ./images/team/img-4-354.jpg 354w,
+                  ./images/team/img-4-450.jpg 450w,
+                  ./images/team/img-4-540.jpg 540w,
+                  ./images/team/img-4-708.jpg 708w,
+                  ./images/team/img-4-900.jpg 900w
+                "
+                sizes="(min-width: 1200) 270px, (min-width: 768px) 354px, 100vw "
+                src="./images/team/img-4-270.jpg"
                 alt="Михаил Ермаков"
-                width="270"
-                height="260"
+                width="450"
+                height="460"
               />
               <div class="card-name">
                 <h3 class="team-caption">Михаил Ермаков</h3>
