добавляет фоновое изображение в секцию Героя

--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
     </header>
     <main>
       <!-- Hero -->
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="hero__conteiner conteiner">
           <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
           <button data-modal-open class="hero__btn" type="button">
             Заказать услугу
           </button>
         </div>
-      </section> -->
+      </section>
 
       <!-- Features -->
       <section class="features">
