выравнивает кнопку в хедер

--- a/index.html
+++ b/index.html
@@ -754,53 +754,57 @@
     </div> -->
 
     <!-- mobile menu -->
-    <div class="mob-menu" data-menu>
-      <button class="mob-menu__btn" type="button" data-menu-close>
-        <svg width="40" height="40">
-          <use href="./images/icons.svg#menu-close"></use>
-        </svg>
-      </button>
-      <ul class="mob-nav">
-        <li class="mob-nav__item">
-          <a class="mob-nav__link" href="">Студия</a>
-        </li>
-        <li class="mob-nav__item">
-          <a class="mob-nav__link" href="">Портфолио</a>
-        </li>
-        <li class="mob-nav__item">
-          <a class="mob-nav__link" href="">Контакты</a>
-        </li>
-      </ul>
-      <ul class="mob-contacts">
-        <li class="mob-contacts__item">
-          <a
-            class="mob-contacts__link mob-contacts__link--tel"
-            href="tel:+380961111111"
-            >+38 096 111 11 11</a
-          >
-        </li>
-        <li class="mob-contacts__item">
-          <a
-            class="mob-contacts__link mob-contacts__link--mail"
-            href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-      </ul>
-      <ul class="mob-socials">
-        <li class="mob-socials__item">
-          <a class="mob-socials__link" href="">Instagram</a>
-        </li>
-        <li class="mob-socials__item">
-          <a class="mob-socials__link" href="">Twitter</a>
-        </li>
-        <li class="mob-socials__item">
-          <a class="mob-socials__link" href="">Facebook</a>
-        </li>
-        <li class="mob-socials__item">
-          <a class="mob-socials__link" href="">Linkedin</a>
-        </li>
-      </ul>
+    <div class="menu-overlay" data-menu>
+      <div class="mob-menu">
+        <button class="mob-menu__btn" type="button" data-menu-close>
+          <svg width="40" height="40">
+            <use href="./images/icons.svg#menu-close"></use>
+          </svg>
+        </button>
+        <ul class="mob-nav">
+          <li class="mob-nav__item">
+            <a class="mob-nav__link mob-nav__link--active" href="./index.html"
+              >Студия</a
+            >
+          </li>
+          <li class="mob-nav__item">
+            <a class="mob-nav__link" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="mob-nav__item">
+            <a class="mob-nav__link" href="">Контакты</a>
+          </li>
+        </ul>
+        <ul class="mob-contacts">
+          <li class="mob-contacts__item">
+            <a
+              class="mob-contacts__link mob-contacts__link--tel"
+              href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
+          <li class="mob-contacts__item">
+            <a
+              class="mob-contacts__link mob-contacts__link--mail"
+              href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+        <ul class="mob-socials">
+          <li class="mob-socials__item">
+            <a class="mob-socials__link" href="">Instagram</a>
+          </li>
+          <li class="mob-socials__item">
+            <a class="mob-socials__link" href="">Twitter</a>
+          </li>
+          <li class="mob-socials__item">
+            <a class="mob-socials__link" href="">Facebook</a>
+          </li>
+          <li class="mob-socials__item">
+            <a class="mob-socials__link" href="">Linkedin</a>
+          </li>
+        </ul>
+      </div>
     </div>
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
