Стилизует хедер для планшета

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
       </section>
 
       <!-- Section clients -->
-      <!-- <section class="clients">
+      <section class="clients">
         <div class="conteiner">
           <h2 class="clients__title">Постоянные клиенты</h2>
           <ul class="clients__list">
@@ -575,9 +575,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="conteiner footer__conteiner">
         <div class="footer__adds">
           <a href="" class="footer__logo"
@@ -682,7 +682,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- Modal -->
     <!-- <div class="backdrop is-hidden" data-modal>
