--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,11 @@
         <a href="" class="header__logo"
           ><span class="header__logo--first-logo">Web</span>Studio</a
         >
+        <button class="menu-btn" type="button" data-menu-open>
+          <svg width="40" height="40">
+            <use href="./images/icons.svg#burger-menu"></use>
+          </svg>
+        </button>
         <nav class="nav">
           <ul class="nav__list">
             <li class="nav__item">
@@ -103,10 +108,19 @@
               <a href="" class="portfolio__link">
                 <div class="overlay">
                   <img
-                    src="./images/projects/img1sq.jpeg"
+                    srcset="
+                      ./images/portfolio/img-1-354.jpg 354w,
+                      ./images/portfolio/img-1-370.jpg 370w,
+                      ./images/portfolio/img-1-450.jpg 450w,
+                      ./images/portfolio/img-1-708.jpg 708w,
+                      ./images/portfolio/img-1-740.jpg 740w,
+                      ./images/portfolio/img-1-900.jpg 900w
+                    "
+                    sizes="(min-width: 1200) 370px, (min-width: 768) 354px, 100vw"
+                    src="./images/portfolio/img-1-354.jpg"
                     alt="Ноутбук с изображением"
-                    width="370"
-                    height="294"
+                    width="450"
+                    height="404"
                   />
                   <div class="overlay__txt">
                     <p class="text">
@@ -127,10 +141,19 @@
               <a class="portfolio__link" href="">
                 <div class="overlay">
                   <img
-                    src="./images/projects/img2sq.jpeg"
+                    srcset="
+                      ./images/portfolio/img-2-354.jpg 354w,
+                      ./images/portfolio/img-2-370.jpg 370w,
+                      ./images/portfolio/img-2-450.jpg 450w,
+                      ./images/portfolio/img-2-708.jpg 708w,
+                      ./images/portfolio/img-2-740.jpg 740w,
+                      ./images/portfolio/img-2-900.jpg 900w
+                    "
+                    sizes="(min-width: 1200) 370px, (min-width: 768) 354px, 100vw"
+                    src="./images/portfolio/img-2-354.jpg"
                     alt="Два баскетболиста"
-                    width="370"
-                    height="294"
+                    width="450"
+                    height="404"
                   />
                   <div class="overlay__txt">
                     <p class="text">
@@ -153,10 +176,19 @@
               <a class="portfolio__link" href="">
                 <div class="overlay">
                   <img
-                    src="./images/projects/img3sq.jpeg"
+                    srcset="
+                      ./images/portfolio/img-3-354.jpg 354w,
+                      ./images/portfolio/img-3-370.jpg 370w,
+                      ./images/portfolio/img-3-450.jpg 450w,
+                      ./images/portfolio/img-3-708.jpg 708w,
+                      ./images/portfolio/img-3-740.jpg 740w,
+                      ./images/portfolio/img-3-900.jpg 900w
+                    "
+                    sizes="(min-width: 1200) 370px, (min-width: 768) 354px, 100vw"
+                    src="./images/portfolio/img-3-354.jpg"
                     alt="логотип ресторана The Seafood"
-                    width="370"
-                    height="294"
+                    width="450"
+                    height="404"
                   />
                   <div class="overlay__txt">
                     <p class="text">
@@ -177,10 +209,19 @@
               <a class="portfolio__link" href="">
                 <div class="overlay">
                   <img
-                    src="./images/projects/img4sq.jpeg"
+                    srcset="
+                      ./images/portfolio/img-4-354.jpg 354w,
+                      ./images/portfolio/img-4-370.jpg 370w,
+                      ./images/portfolio/img-4-450.jpg 450w,
+                      ./images/portfolio/img-4-708.jpg 708w,
+                      ./images/portfolio/img-4-740.jpg 740w,
+                      ./images/portfolio/img-4-900.jpg 900w
+                    "
+                    sizes="(min-width: 1200) 370px, (min-width: 768) 354px, 100vw"
+                    src="./images/portfolio/img-4-354.jpg"
                     alt="Наушники"
-                    width="370"
-                    height="294"
+                    width="450"
+                    height="404"
                   />
                   <div class="overlay__txt">
                     <p class="text">
@@ -201,10 +242,19 @@
               <a class="portfolio__link" href="">
                 <div class="overlay">
                   <img
-                    src="./images/projects/img5sq.jpeg"
+                    srcset="
+                      ./images/portfolio/img-5-354.jpg 354w,
+                      ./images/portfolio/img-5-370.jpg 370w,
+                      ./images/portfolio/img-5-450.jpg 450w,
+                      ./images/portfolio/img-5-708.jpg 708w,
+                      ./images/portfolio/img-5-740.jpg 740w,
+                      ./images/portfolio/img-5-900.jpg 900w
+                    "
+                    sizes="(min-width: 1200) 370px, (min-width: 768) 354px, 100vw"
+                    src="./images/portfolio/img-5-354.jpg"
                     alt="Две картонные коробки"
-                    width="370"
-                    height="294"
+                    width="450"
+                    height="404"
                   />
                   <div class="overlay__txt">
                     <p class="text">
@@ -225,10 +275,19 @@
               <a class="portfolio__link" href="">
                 <div class="overlay">
                   <img
-                    src="./images/projects/img6sq.jpeg"
+                    srcset="
+                      ./images/portfolio/img-6-354.jpg 354w,
+                      ./images/portfolio/img-6-370.jpg 370w,
+                      ./images/portfolio/img-6-450.jpg 450w,
+                      ./images/portfolio/img-6-708.jpg 708w,
+                      ./images/portfolio/img-6-740.jpg 740w,
+                      ./images/portfolio/img-6-900.jpg 900w
+                    "
+                    sizes="(min-width: 1200) 370px, (min-width: 768) 354px, 100vw"
+                    src="./images/portfolio/img-6-354.jpg"
                     alt="Экран монитора"
-                    width="370"
-                    height="294"
+                    width="450"
+                    height="404"
                   />
                   <div class="overlay__txt">
                     <p class="text">
@@ -249,10 +308,19 @@
               <a class="portfolio__link" href="">
                 <div class="overlay">
                   <img
-                    src="./images/projects/img7sq.jpeg"
+                    srcset="
+                      ./images/portfolio/img-7-354.jpg 354w,
+                      ./images/portfolio/img-7-370.jpg 370w,
+                      ./images/portfolio/img-7-450.jpg 450w,
+                      ./images/portfolio/img-7-708.jpg 708w,
+                      ./images/portfolio/img-7-740.jpg 740w,
+                      ./images/portfolio/img-7-900.jpg 900w
+                    "
+                    sizes="(min-width: 1200) 370px, (min-width: 768) 354px, 100vw"
+                    src="./images/portfolio/img-7-354.jpg"
                     alt="Раскрытая книга"
-                    width="370"
-                    height="294"
+                    width="450"
+                    height="404"
                   />
                   <div class="overlay__txt">
                     <p class="text">
@@ -273,10 +341,19 @@
               <a class="portfolio__link" href="">
                 <div class="overlay">
                   <img
-                    src="./images/projects/img8sq.jpeg"
+                    srcset="
+                      ./images/portfolio/img-8-354.jpg 354w,
+                      ./images/portfolio/img-8-370.jpg 370w,
+                      ./images/portfolio/img-8-450.jpg 450w,
+                      ./images/portfolio/img-8-708.jpg 708w,
+                      ./images/portfolio/img-8-740.jpg 740w,
+                      ./images/portfolio/img-8-900.jpg 900w
+                    "
+                    sizes="(min-width: 1200) 370px, (min-width: 768) 354px, 100vw"
+                    src="./images/portfolio/img-8-354.jpg"
                     alt="Бирка з надписью"
-                    width="370"
-                    height="294"
+                    width="450"
+                    height="404"
                   />
                   <div class="overlay__txt">
                     <p class="text">
@@ -297,10 +374,19 @@
               <a class="portfolio__link" href="">
                 <div class="overlay">
                   <img
-                    src="./images/projects/img9sq.jpeg"
+                    srcset="
+                      ./images/portfolio/img-9-354.jpg 354w,
+                      ./images/portfolio/img-9-370.jpg 370w,
+                      ./images/portfolio/img-9-450.jpg 450w,
+                      ./images/portfolio/img-9-708.jpg 708w,
+                      ./images/portfolio/img-9-740.jpg 740w,
+                      ./images/portfolio/img-9-900.jpg 900w
+                    "
+                    sizes="(min-width: 1200) 370px, (min-width: 768) 354px, 100vw"
+                    src="./images/portfolio/img-9-354.jpg"
                     alt="Работа за ноутбуком"
-                    width="370"
-                    height="294"
+                    width="450"
+                    height="404"
                   />
                   <div class="overlay__txt">
                     <p class="text">
@@ -429,5 +515,62 @@
         </div>
       </div>
     </footer>
+
+    <!-- mobile menu -->
+    <div class="menu-overlay" data-menu>
+      <div class="mob-menu">
+        <button class="mob-menu__btn" type="button" data-menu-close>
+          <svg width="40" height="40">
+            <use href="./images/icons.svg#menu-close"></use>
+          </svg>
+        </button>
+        <ul class="mob-nav">
+          <li class="mob-nav__item">
+            <a class="mob-nav__link" href="./index.html">Студия</a>
+          </li>
+          <li class="mob-nav__item">
+            <a
+              class="mob-nav__link mob-nav__link--active"
+              href="./portfolio.html"
+              >Портфолио</a
+            >
+          </li>
+          <li class="mob-nav__item">
+            <a class="mob-nav__link" href="">Контакты</a>
+          </li>
+        </ul>
+        <ul class="mob-contacts">
+          <li class="mob-contacts__item">
+            <a
+              class="mob-contacts__link mob-contacts__link--tel"
+              href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
+          <li class="mob-contacts__item">
+            <a
+              class="mob-contacts__link mob-contacts__link--mail"
+              href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+        <ul class="mob-socials">
+          <li class="mob-socials__item">
+            <a class="mob-socials__link" href="">Instagram</a>
+          </li>
+          <li class="mob-socials__item">
+            <a class="mob-socials__link" href="">Twitter</a>
+          </li>
+          <li class="mob-socials__item">
+            <a class="mob-socials__link" href="">Facebook</a>
+          </li>
+          <li class="mob-socials__item">
+            <a class="mob-socials__link" href="">Linkedin</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
