--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
     </footer>
 
     <!-- Modal -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button data-modal-close class="close-btn" type="button">
           <svg class="icon-close" width="11" height="11">
@@ -751,7 +751,7 @@
           <button class="send-btn" type="submit">Отправить</button>
         </form>
       </div>
-    </div> -->
+    </div>
 
     <!-- mobile menu -->
     <div class="menu-overlay" data-menu>
